--- a/2장/age.html
+++ b/2장/age.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>age</title>
+  <link rel="stylesheet" href="css/age.css">
 </head>
 <body>
-  
+  // 버튼을 클릭하면 calc()가 호출됟다.
+    <button class="btn" onclick="calc()">나이 계산</button>
+    <div id="result" class="show">(결과값 표시)</div>
+    <script>
+      // 함수 calc()선언과 구현을 하고 있다.
+      function calc() {
+          var currentYear = 2022; //올해 년도를 저장을 변ㅅ currentYear에 저장함.
+          // 사용자로부터 입력을 받은 값으로 변수 birthYear에 저장함.
+          var birthYear = prompt("태어난 년도를 입력하세요.","YYYY");
+          // 변수 age를 0으로 초기화
+          var age = 0;
+          // 실제 나이를 구하기 위한 코드
+          age = currentYear - birthYear + 1;
+          //document는 현재 웹브라우저의 페이지를 의미하고, querySelector()는 
+          // id가 result인 웹 요소(div)를 의미한다.innerHTML은 대입한 값으로 
+          // html문서에 대체하시오.
+          document.querySelector("#result").innerHTML = 
+                                    "당신의 나이는" + age + "세입니다.";
+      }
+    </script>
 </body>
 </html>
