--- a/js입문/ex03.html
+++ b/js입문/ex03.html
@@ -17,7 +17,13 @@
     //이 아래줄을 수정해서 a가 b보다 큰지를 return하도록 만들어 보세요.
     return (a > b);
 }
-  
+    //관계연산자 - 실습2
+    //함수 solution의 내용을 수정해서 a와 b가 모두 True라면 True를, 그렇지 않으면 False를 return하도록 만들어 보세요.
+    function solution(a, b){
+    //이 아래줄을 수정해서 a와 b가 모두 True인지를 return하도록 만들어 보세요.
+    return (a && b);
+}
+    //
  </script>
 </head>
 <body>
