[#18] String이어 붙잉기 - 실습

--- a/js입문/ex03.html
+++ b/js입문/ex03.html
@@ -23,7 +23,15 @@
     //이 아래줄을 수정해서 a와 b가 모두 True인지를 return하도록 만들어 보세요.
     return (a && b);
 }
-    //
+    //String 이어 붙이기 - 실습
+    //변수 prefix에 저장된 문자열에 변수 suffix에 저장된 문자열을 붙여서 word에 저장하세요. 그리고 그 길이를 변수 word_length에 저장하세요.
+    var prefix = "program";
+    var suffix = "mer";
+    var word = prefix.concat(suffix);
+    var word_length = word.length;
+
+    console.log("word : ", word);
+    console.log("word_length : ", word_length);
  </script>
 </head>
 <body>
