[#18] String 다루기 -실습 2

--- a/js입문/ex03.html
+++ b/js입문/ex03.html
@@ -32,6 +32,18 @@
 
     console.log("word : ", word);
     console.log("word_length : ", word_length);
+
+    //string다루기 - 실습 1
+    //함수 solution을 수정해서 인자 str의 첫번째 글자를 return하는 함수를 만들어 보세요.
+    function solution(str){
+    var str ="abcdefg";
+    return (str[0]);
+}
+    //String 다루기 - 실습(2)
+    //함수 solution을 수정해서 인자 str의 첫2글자를 문자열로 return하는 함수를 만들어 보세요.
+    function solution(str) {
+    return str.substr(0, 2); 
+}
  </script>
 </head>
 <body>
