[#18] 가위바위보게임 (중첩을 줄이는 법)

--- a/js입문/rsp.html
+++ b/js입문/rsp.html
@@ -50,9 +50,58 @@
       $computer.style.backgroundSize = 'auto 200px'; // 가로넓이와 세로높이
       //setInterval(changeComputerHand,50); // 똑같은 함수를 두번 호출한다 = 재귀함수라고 함.
     }
-    setInterval(changeComputerHand,50); //changeComputerHand()로 넣으면 안됨. 함수라 함수값을 넣어야한다는 뜻 
-    // setInterval은 함수간에 1초간격으로 정해져야 한다면 사용.
-    // setTimeout은 함수간에 1초이상만 되면 된다하면 사용.
+    let intervalId = setInterval(changeComputerHand, 50); // (함수,밀리초)
+    
+    const scoreTable = { //가위바위보를 숫자로 바꿔서 빼준다고 생각하며 함수의 중첩을 제거함.
+      rock: 0,
+      scissors: 1,
+      paper: -1,
+    };
+
+    // clickButton 5번 호출, 인터벌 1번, 2번,3번,4번,5번(얘만 intervalId) => 1번이 호출되고 2번이 호출될 때 똑같은자리에 덮혀지기 때문에 마지막에 5번이 덮혀지게 됨.
+    // 그 다음에 6번째로 버튼을 클릭하면 5번만 취소.
+    let clickable = true;
+    let score = 0; 
+      const clickButton = ()=> {
+        if(clickable){
+          clearInterval(intervalId);
+          clickable = false;
+          // 점수 계산 및 화면 표시 
+          const myChoice = event.target.textContent === '바위'
+          ? 'rock'
+          : event.target.textContent === '가위'
+          ? 'scissors'
+          : paper;
+          // 중첩 줄임 (아래)
+        const myScore = scoreTable[myChoice];
+        const computerScore = scoreTable[computerChoice];
+        const diff = myScore - computerScore;
+        
+        let message;
+         // // 2, -1 은 승리조건이고, -2,1은 패배조건, 점수표 참고
+        if ([2, -1].includes(diff)){  //== 같음(diff === 2 || diff ===  -1)
+          score += 1;
+          message = '승리';
+        } else if ([-2,1].includes(diff)) { // //(diff === -2 || diff === 1)
+          score -= 1;
+          message = '패배';
+        } else   { //(diff === 0)
+          message = '무승부';
+        }
+        $score.textContent = `${message}총: ${score}점`;
+  
+          setTimeout (()=> {
+            clickable = true;
+            intervalId = setInterval(changeComputerHand,50);
+          }, 1000);     
+          }
+        };
+
+    $rock.addEventListener('click', clickButton);
+    $scissors.addEventListener('click', clickButton);
+    $paper.addEventListener('click', clickButton);
+
+
   </script>
 </body>
 </html>
