--- a/js입문/response-check.html
+++ b/js입문/response-check.html
@@ -35,25 +35,45 @@
     // 태그.classList.add('클래스'); // 추가 
     // 태그.classList.replace('기존클래스','수정클래스'); //수정 
     // 태그.classList.remove('클래스'); //제거
+    
+    let startTime;
+    let endTime; // let의 블록스코프 특성때문에 스코프가 생겨서 바깥에서 변수로서 붙여줘야 함.
+    const records = [];
+    let timeoutId;
     $screen.addEventListener('click', (event) => { // 파랑
       if(event.target.classList.contains('waiting')) {
         $screen.classList.remove('waiting'); //제거 
         $screen.classList.add('ready'); // 추가 
         $screen.textContent ='초록색이 되면 클릭하세요';
-        setTimeout(function(){
+        timeoutId = setTimeout(function(){
+          startTime = new Date();
           $screen.classList.remove('ready');
           $screen.classList.add('now');
           $screen.textContent ='클릭하세요!';
           // 첫 시간 재기 
-        },Math.floor(Math.random()*1000 + 2000); // 2초에서 3초사이,2000과 3000사이 수
+        },Math.floor(Math.random()*1000) + 2000); // 2초에서 3초사이,2000과 3000사이 수
         // 2000 <= X * 1000 + 2000 < 3000 (2000에서 2999 자연수)
       } else if (event.target.classList.contains('ready')) { // 빨강
-        // 끝 시간 재기
-        // 시간 차이 저장하기
-
+        clearTimeout(timeoutId);
+        $screen.classList.remove('ready');
+        $screen.classList.add('waiting');
+        $screen.textContent= '너무 성급하시군요!';
       } else if (event.target.classList.contains('now')) { // 초록 
+          // 끝 시간 재기
+          endTime = new Date();
+          const current = endTime - startTime;
+          records.push(current);
+          const average = records.reduce((a,c) => a+c) / records.length; //평균 구할 때는 records.reduce를 사용하여 records.length를 빼준다.
+          $result.textContent = `현재 ${current}ms, 평균: ${average}ms`;
+          startTime = null;
+          endTime = null;
+          endTime = new Date();
+          $screen.classList.remove('now');
+          $screen.classList.add('waiting');
+          $screen.textContent = '클릭해서 시작하세요.';
+          // 시간 차이 저장하기
 
-
+        
       }
     });
   </script>
