[#18] 리팩토링(this,중복제거)

--- a/홈페이지 만들기 /ex01.html
+++ b/홈페이지 만들기 /ex01.html
@@ -30,5 +30,31 @@ if(document.querySelector('#night_day').value === 'night'){
   document.querySelector('#night_day').value = 'night'
 }
 ">
+<input type="button" value="night" onclick="
+var target = document.querySelector('body');
+if(this.value === 'night'){
+ target.style.backgroundColor = 'black'
+ target.style.color = 'white';
+ this.value = 'day';
+} else {
+  target.style.backgroundColor = 'white'
+  target.style.color = 'black';
+  this.value = 'night';
+}
+">
+<!-- 
+<input type = "button" value="night" onclick="
+let target = document.querySelector('body');
+
+if(this.value === 'night'){
+  target.style.backgroundColor = 'black';
+  this.style.color = 'white';
+  this.value = 'day';
+} else {
+  target.style.backgroundColor = 'white';
+  this.style.color = 'black';
+  this.value = 'night';
+}
+"> -->
 </body>
 </html>
