--- a/홈페이지 만들기 /ex01.html
+++ b/홈페이지 만들기 /ex01.html
@@ -33,6 +33,7 @@ if(document.querySelector('#night_day').value === 'night'){
 <input type="button" value="night" onclick="
 var target = document.querySelector('body');
 if(this.value === 'night'){
+  // id대신 this 사용하여 리팩토링
  target.style.backgroundColor = 'black'
  target.style.color = 'white';
  this.value = 'day';
@@ -56,5 +57,37 @@ if(this.value === 'night'){
   this.value = 'night';
 }
 "> -->
+
+<input id ="night_day" type="button" value="night" onclick="
+nightDayHandler(this);
+">
+<script>
+  function nightDayHandler (self) {
+  var target = document.querySelector('body');
+  if(self.value === 'night'){
+  target.style.backgroundColor = 'black';
+  target.style.color = 'white';
+  self.value = 'day';
+
+  var alist = document.querySelectorAll('a');
+  var i = 0;
+  while(i < alist.length){
+    alist[i].style.color = 'powderblue'
+    i = i + 1;
+  }
+} else {
+  target.style.backgroundColor = 'white';
+  target.style.color = 'black';
+  self.value = 'night';
+
+  var alist = document.querySelectorAll('a');
+  var i = 0;
+  while(i < alist.length){
+    alist[i].style.color = 'blue'
+    i = i + 1;
+  }
+}
+  }
+</script>
 </body>
 </html>
