[#18] 미디어쿼리(실습2)

--- a/js입문/boostcourse실습_media query.html
+++ b/js입문/boostcourse실습_media query.html
@@ -54,6 +54,15 @@ body {
   }
  }
 
+ @media print {
+  a {
+    text-decoration: none;
+  }
+  a:after {
+    display: inline;
+    content: "("attr(href)")";
+  }
+}
   </style>
 </head>
 <body>
