--- a/웹UI개발/projectA-1.html
+++ b/웹UI개발/projectA-1.html
@@ -5,28 +5,32 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>projectA-1</title>
+  <link rel="stylesheet" href="projectA-1.css">
 </head>
 <body>
-  <header>포트폴리오</header>
+  <header>
+    <h1>포트폴리오</h1>
+  </header>
   <div id="portfolio">
     <ui>
-    <li>테이블 요소</li>
-    <li>폼 요소</li>
-    <li>리스트 요소</li>
+      <li>테이블 요소</li>
+      <li>폼 요소</li>
+      <li>리스트 요소</li>
     </ui>
     <h3>구성요소</h3>
-    <div id = "">
-    <table>
-      <tr>
-        <th>테이블 요소</th>
-          <td>콘텐츠 영역</td>
-        <th>폼 요소</th>
-          <td>콘텐츠 영역</td>
-        <th>리스트 요소</th>
-          <td>콘텐츠 영역</td>
-      </tr>
-    </div>
+      <hr class ="one">
+    <div id = "table">
+      <table>
+        <tr>
+          <th>테이블 요소</th>
+            <td>콘텐츠 영역</td>
+          <th>폼 요소</th>
+            <td>콘텐츠 영역</td>
+          <th>리스트 요소</th>
+            <td>콘텐츠 영역</td>
+        </tr>
     </table>
+  </div>
     <footer>
       <div id = "footer">
         <h5>주소: 경기도 성남시 분당구, EMAIL:hongglidong@naver.com</h5>
