--- a/웹UI개발/projectA-1.html
+++ b/웹UI개발/projectA-1.html
@@ -11,12 +11,13 @@
   <header>
     <h1>포트폴리오</h1>
   </header>
-  <div id="portfolio">
-    <ui>
+  <section>
+    <ul id="portfolio">
       <li>테이블 요소</li>
       <li>폼 요소</li>
       <li>리스트 요소</li>
-    </ui>
+    </ul>
+  </section>
     <h3>구성요소</h3>
       <hr class ="one">
     <div id = "table">
