--- a/웹UI개발/projectA-1.html
+++ b/웹UI개발/projectA-1.html
@@ -12,11 +12,11 @@
     <h1>포트폴리오</h1>
   </header>
   <section>
-    <ul id="portfolio">
-      <li>테이블 요소</li>
-      <li>폼 요소</li>
-      <li>리스트 요소</li>
-    </ul>
+    <div id="portfolio">
+      <div class="first">테이블 요소</div>
+      <div class="second">폼 요소</div>
+      <div class="third">리스트 요소</div>
+    </div>
   </section>
     <h3>구성요소</h3>
       <hr class ="one">
