[#20] main 박스 만들기

--- a/웹UI개발/projectA-1.html
+++ b/웹UI개발/projectA-1.html
@@ -13,10 +13,12 @@
   </header>
   <section>
     <div id="portfolio">
+      <div class="blackBox">
       <div class="first">테이블 요소</div>
       <div class="second">폼 요소</div>
       <div class="third">리스트 요소</div>
     </div>
+  </div>
   </section>
     <h3>구성요소</h3>
       <hr class ="one">
