[#20] 구성요소 위치 지정

--- a/웹UI개발/projectA-1.html
+++ b/웹UI개발/projectA-1.html
@@ -20,8 +20,12 @@
     </div>
   </div>
   </section>
+  <div class="component"> 
     <h3>구성요소</h3>
-      <hr class ="one">
+  </div>
+  <div class ="one">
+    <hr style="border: solid 0.5px black;">
+  </div>
     <div id = "table">
       <table>
         <tr>
