[#20] 테이블 만들기

--- a/웹UI개발/projectA-1.html
+++ b/웹UI개발/projectA-1.html
@@ -26,18 +26,24 @@
   <div class ="one">
     <hr style="border: solid 0.5px black;">
   </div>
-    <div id = "table">
-      <table>
+      <table class="table">
+          <td>테이블 요소</td>
+          <tr>
+          <td>콘텐츠 요소</td>
+          </tr>
+        </table>
+        <table>
+          <td>폼 요소</td>
         <tr>
-          <th>테이블 요소</th>
-            <td>콘텐츠 영역</td>
-          <th>폼 요소</th>
-            <td>콘텐츠 영역</td>
-          <th>리스트 요소</th>
-            <td>콘텐츠 영역</td>
+          <td>콘텐츠 요소</td>
         </tr>
-    </table>
-  </div>
+      </table>
+        <table>
+          <td>리스트 요소</td>
+        <tr>
+          <td>콘텐츠 요소</td>
+        </tr>
+      </table>
     <footer>
       <div id = "footer">
         <h5>주소: 경기도 성남시 분당구, EMAIL:hongglidong@naver.com</h5>
