--- a/웹UI개발/projectA-1.html
+++ b/웹UI개발/projectA-1.html
@@ -28,17 +28,17 @@
   </div>
       <table class="table">
           <td>테이블 요소</td>
-          <tr>
+          <tr id="boxs">
           <td>콘텐츠 요소</td>
           </tr>
         </table>
-        <table>
+        <table class="form">
           <td>폼 요소</td>
         <tr>
           <td>콘텐츠 요소</td>
         </tr>
       </table>
-        <table>
+        <table class="lsit"> 
           <td>리스트 요소</td>
         <tr>
           <td>콘텐츠 요소</td>
