[#20] 테이블 수정 및 만들기 (크기 및 컬러 수정)

--- a/웹UI개발/projectA-1.html
+++ b/웹UI개발/projectA-1.html
@@ -27,20 +27,20 @@
     <hr style="border: solid 0.5px black;">
   </div>
       <table class="table">
-          <td>테이블 요소</td>
-          <tr id="boxs">
+          <td id= table>테이블 요소</td>
+          <tr id="contents1">
           <td>콘텐츠 요소</td>
           </tr>
         </table>
         <table class="form">
-          <td>폼 요소</td>
-        <tr>
+          <td id="form">폼 요소</td>
+        <tr id="contents2">
           <td>콘텐츠 요소</td>
         </tr>
       </table>
         <table class="lsit"> 
-          <td>리스트 요소</td>
-        <tr>
+          <td id="list">리스트 요소</td>
+        <tr id="contents3">
           <td>콘텐츠 요소</td>
         </tr>
       </table>
