[#20] main 테이블 및 footer 수정 및 만들기(텍스트 위치, footer 위치 및 텍스트 컬러)

--- a/웹UI개발/projectA-1.html
+++ b/웹UI개발/projectA-1.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="projectA-1.css">
 </head>
 <body>
+  <div class="pf">
   <header>
     <h1>포트폴리오</h1>
   </header>
@@ -26,6 +27,7 @@
   <div class ="one">
     <hr style="border: solid 0.5px black;">
   </div>
+  <section>
       <table class="table">
           <td id= table>테이블 요소</td>
           <tr id="contents1">
@@ -44,14 +46,13 @@
           <td>콘텐츠 요소</td>
         </tr>
       </table>
+    </section>
     <footer>
-      <div id = "footer">
-        <h5>주소: 경기도 성남시 분당구, EMAIL:hongglidong@naver.com</h5>
-        <h5>Copyrightⓒ Hong Gil Dong.All Rights Reserved.</h5>
-      </div>
+      <P id = "footer">
+        <span style="color: rgb(159, 159, 159);">주소: 경기도 성남시 분당구, EMAIL:hongglidong@naver.com</br></span>
+        <span></br>Copyrightⓒ Hong Gil Dong.All Rights Reserved.</span>
+      </p>
     </footer>
   </div>
-  
-
 </body>
 </html>
