--- a/웹UI개발/projectA-1.html
+++ b/웹UI개발/projectA-1.html
@@ -12,7 +12,6 @@
   <header>
     <h1>포트폴리오</h1>
   </header>
-  <section>
     <div id="portfolio">
       <div class="blackBox">
       <div class="first">테이블 요소</div>
@@ -20,7 +19,6 @@
       <div class="third">리스트 요소</div>
     </div>
   </div>
-  </section>
   <div class="component"> 
     <h3>구성요소</h3>
   </div>
@@ -29,19 +27,25 @@
   </div>
   <section>
       <table class="table">
+        <tr>
           <td id= table>테이블 요소</td>
+        </tr>
           <tr id="contents1">
           <td>콘텐츠 요소</td>
           </tr>
         </table>
         <table class="form">
+          <tr>
           <td id="form">폼 요소</td>
+        </tr>
         <tr id="contents2">
           <td>콘텐츠 요소</td>
         </tr>
       </table>
         <table class="lsit"> 
+          <tr>
           <td id="list">리스트 요소</td>
+        </tr>
         <tr id="contents3">
           <td>콘텐츠 요소</td>
         </tr>
@@ -49,8 +53,8 @@
     </section>
     <footer>
       <P id = "footer">
-        <span style="color: rgb(159, 159, 159);">주소: 경기도 성남시 분당구, EMAIL:hongglidong@naver.com</br></span>
-        <span></br>Copyrightⓒ Hong Gil Dong.All Rights Reserved.</span>
+        <span style="color: rgb(159, 159, 159);">주소: 경기도 성남시 분당구, EMAIL:hongglidong@naver.com<br></span>
+        <span><br>Copyrightⓒ Hong Gil Dong.All Rights Reserved.</span>
       </p>
     </footer>
   </div>
