--- a/html&css/0422.html
+++ b/html&css/0422.html
@@ -8,55 +8,43 @@
   <link href="/html&css/0422.css" rel="stylesheet" media="all"/>
 </head>
 <body>
+
+  <!-- 1. -->
   <section class="card">
     <div class="photo">
-      <img src="./images/Image1.png">
+        <img src="./images/Image1.png">
     </div>
     <div class="index">
-      <div class="avata">
-        <img src="./images/Avatar.png"/>
-        <strong>Felipe Sacudon</strong>
-    </div>
-  <div class="reaction">
-    <span class="comment">
-      <img src="./images/message-circle.svg"/>
-      <b>22</b>
-    </span>
-    <span class="like">
-      <img src="./images/heart.svg"/>
-      <b>22</b>
-    </span>
-  </div>
-</div>  
-</section>
-  <section class="card">
-    <div class="header">
-      <button class="btn small green">HOME</button>
-      <h2 class="writer">Lampara Look</h2>
-      <strong class="writer">by Saca Tuerca</strong>
-    </div>
-    <div class="photo"><img src="./images/Image1.png"/></div>
-    <div class="article">
-      <h2 class="title">Lampara Look</h2>
-      <p class="text">Lorem ipsum carrots, enhanced undergraduate developer, but they do occaecat time and vitality, Lorem ipsum carrots, enhanced undergraduate developer, but they do occaecat time and vitality</p>
-    </div> 
-    <div class="index">
-      <div class="avata">
-          <img src="./images/Avatar.png" />
-          <strong>Felipe Sacudon</strong>
-      </div>
-      <div class="reaction">
+        <div class="avata">
+            <img src="./images/Avatar.png"/>
+            <strong>Felipe Sacudon</strong>
+        </div>
+        <div class="reaction">
           <span class="comment">
-              <img src="./images/message-circle.svg" />
-              <b>22</b>
+            <img src="./images/message-circle.svg"/>
+            <b>22</b>
           </span>
           <span class="like">
-              <img src="./images/heart.svg" />
-              <b>22</b>
-          </span>
-      </div>
+            <img src="./images/heart.svg"/>
+            <b>22</b>
+        </span>
+     </div>
   </div>  
+</section>
+
+<!-- 2. -->
+  <section class="card">
+    <div class="photo">
+      <img src="./images/Image1.png"/>
+    </div>
+    <div class="article">
+      <h2 class="title">Lampara Look</h2>
+      <strong>Lora look</strong>
+      <p>text blahblahblah is lampara look detail was balch blahblah</p>
+    </div>
   </section>
+  
+  <!-- 3. -->
   <section class="card">
     <div class="header">
         <button class="btn small green">HOME</button>
