[#21] html& css 추가 및 수정

--- a/html&css/0422.html
+++ b/html&css/0422.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link href="/html&css/0422.css" rel="stylesheet" media="all"/>
+  <title>Card2</title>
+  <link href="0422.css" rel="stylesheet" media="all"/>
 </head>
 <body>
 
@@ -43,7 +43,7 @@
       <p>text blahblahblah is lampara look detail was balch blahblah</p>
     </div>
   </section>
-  
+
   <!-- 3. -->
   <section class="card">
     <div class="header">
