--- a/1만 시간의 법칙 clone/index.html
+++ b/1만 시간의 법칙 clone/index.html
@@ -12,20 +12,18 @@
 <div class="header">
   <div class="img1"><img src="./image/clock.png" alt="bg_img"></div>
   <div class="img2"><img src="./image/title.png" alt="1만 시간의 법칙"></div>
-</div>
-<div class="quote">
-  <h3>"연습은 어제의 당신보다 당신을 더 낫게 만든다"</h3>
+  <div class="quote">
+    <p>"연습은 어제의 당신보다 당신을 더 낫게 만든다"</p>
+  </div>
 </div>
   <div class="quote2">
-    <h2>1만 시간의 법칙은<br> 어떤 분야의 전문가가 되기 위해서는 <br>최소한 1만 시간의 훈련이 필요하다는 법칙이다.</h2>
+    <p><span>1만 시간의 법칙</span>은<br>어떤 분야의 전문가가 되기 위해서는 <br>최소한 1만 시간의 훈련이 필요하다는 법칙이다.</p>
+    <img src="./image/quotes.png" alt="설명">
+    <h2>나는<input type="text" value="예)프로그래밍">전문가가 될 것이다.<br> 그래서 앞으로 매일 하루에 <input type="number" placeholder="예)5">시간씩 훈련할 것이다.</h2>
   </div>
-<div class="content">
-    <h2>나는<br>전문가가 될 것이다.<br> 그래서 앞으로 매일 하루에 <br> 시간씩 훈련할 것이다.</h2>
-</div>
+
   <div class="wrap">
-    <ul>
-      <li>나는 며칠 동안 훈련을 해야 1만 시간이 될까?</li>
-    </ul>
+      <p>나는 며칠 동안 훈련을 해야 1만 시간이 될까?</p>
   </div>
   <div class="inner">
     <h2>당신은 전문가가 되기 위해서 대략 일 이상 훈련하셔야 합니다!:)</h2>
