--- a/1만 시간의 법칙 clone/index.html
+++ b/1만 시간의 법칙 clone/index.html
@@ -4,35 +4,100 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./reset.css">
   <link rel="stylesheet" href="./main.css">
-  <script src="./main.js"></script>
   <title>1만 시간의 법칙</title>
 </head>
 <body>
-<div class="header">
-  <div class="img1"><img src="./image/clock.png" alt="bg_img"></div>
-  <div class="img2"><img src="./image/title.png" alt="1만 시간의 법칙"></div>
-  <div class="quote">
-    <p>"연습은 어제의 당신보다 당신을 더 낫게 만든다"</p>
+  <section id="contents">
+  <div class="wrapper">
+    <div class="title">
+      <img src="./image/clock.png" alt="background_logo" class="clock_img">
+      <div class="title_img">
+        <img src="./image/title.png" alt="1만 시간의 법칙">
+      </div>
+    </div>
+    <div class="intro">
+      <div class="intro_saying">
+        "연습은 어제의 당신보다 당신을 더 낫게 만든다."</div>
+        <div class="explain">
+          <div class="quotes">
+            <img src="./image/quotes.png" alt="따옴표">
+            </div>
+              <p><span>1만 시간의 법칙</span>은<br>어떤 분야의 전문가가 되기 위해서는<br>최소한 1만 시간의 훈련이 필요하다는 법칙이다.</p>
+            </div>
+          </div>
+      <div class="inputs">
+        <div class="field">
+          <p>나는</p><input id="field_value"type="text" placeholder="예)프로그래밍">
+          <p>전문가가 될 것이다.</p>
+        </div>
+        <div class="time">
+          <p>그래서 앞으로 매일 하루에</p>
+          <div>
+            <input type="number" id="time_value" placeholder="예)5">
+            <p>시간씩 훈련할 것이다<div class=""></div></p>
+          </div>
+        </div>
+      </div>
+    <div class="start">
+      <div class="btn_wrap">
+        <button class="start_btn">나는 며칠 동안 훈련을 해야 1만 시간이 될까?</button>
+        <div class="click_img">
+          <img src="./image/click.png" alt="클릭">
+        </div>
+      </div>
+    </div>
+    <div class="result_loading">
+      <div class="img_wrap">
+      <img src="./image/loading.png" alt="로딩 중">
+    </div>
   </div>
-</div>
-  <div class="quote2">
-    <p><span>1만 시간의 법칙</span>은<br>어떤 분야의 전문가가 되기 위해서는 <br>최소한 1만 시간의 훈련이 필요하다는 법칙이다.</p>
-    <img src="./image/quotes.png" alt="설명">
-    <h2>나는<input type="text" value="예)프로그래밍">전문가가 될 것이다.<br> 그래서 앞으로 매일 하루에 <input type="number" placeholder="예)5">시간씩 훈련할 것이다.</h2>
+    <div class="result">
+      <div class="result_wrap">
+        <div>
+          당신은 <span class="field_result"></span>전문가가 되기 위해서
+        </div>
+        <div>
+          대략 <span class="field_result"></span>일 이상 훈련하셔야 합니다! :)
+        </div>
+      </div>
+      <div class="button">
+        <div class="go">
+          <button class="modal_btn">훈련하러 가기 GO!GO!</button>
+        </div>
+        <div class="share">
+          <button class="share_btn">공유하기</button>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="wrap">
-      <p>나는 며칠 동안 훈련을 해야 1만 시간이 될까?</p>
-  </div>
-  <div class="inner">
-    <h2>당신은 전문가가 되기 위해서 대략 일 이상 훈련하셔야 합니다!:)</h2>
-  </div>
-    <button>훈련하러 가기 GO!GO!</button>
-    <button>공유하기</button>
-  <footer>
-    <img src="./image/click.png" alt="click">
-    <p>※ 본 서비스 이미지 및 콘텐츠의 저작권은 주식회사 WeNiv에 있습니다.<br>수정 및 재배포,무단 도용 시 법적인 문제가 발생할 수 있습니다. </p>
+  </section>
+  <section id="modal">
+    <div class="modal_wrap">
+      <div class="cheer">
+        <h1>화이팅!♥♥♥</h1>
+        <h3>당신의 꿈을 응원합니다!</h3>
+      </div>
+      <div class="licat__img">
+        <img src="./image/licat.png" alt="라이캣 응원">
+      </div>
+      <div class="btn">
+        <button class="close_btn">종료하고 진짜 훈련하러 가기 GO!GO!</button>
+        <p>(그냥 닫기 버튼입니다.)</p>
+      </div>
+    </div>
+  </section>
+  <footer id="copyright">
+    <div class="logo">
+      <img src="./image/logo.png" alt="weniv">
+    </div>
+    <p>
+      ※ 본 서비스 내 이미지 및 콘텐츠의 저작권은 주식회사 WeNiv에 있습니다.<br>
+      수정 및 재배포, 무단 도용 시 법적인 문제가 발생할 수 있습니다.
+    </p>
   </footer>
+  <script type="text/javascript" src="./main.js"></script>
+</div>
 </body>
 </html>
