[#24] 최종 수정 (이미지  파일명 수정 및 전체 적인 수정)

--- a/토이프로젝트 복사본/토이프로젝트/index2.html
+++ b/토이프로젝트 복사본/토이프로젝트/index2.html
@@ -17,7 +17,7 @@
         <div class="nav">
           <span>9:41</span>
             <div class="img">
-              <span><img src="./image/CellularConnection.png" alt="연결" class="connection"></span>
+              <span><img src="./image/Cellular Connection.png" alt="연결" class="connection"></span>
               <span><img src="./image/Wifi.png" alt="와이파이" class="wifi"></span>
               <span><img src="./image/Battery.png" alt="베터리" class="battery"></span>
             </div>
