--- a/토이프로젝트 복사본/토이프로젝트/index1.html
+++ b/토이프로젝트 복사본/토이프로젝트/index1.html
@@ -15,7 +15,7 @@
       rel="stylesheet"/>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script defer src="./data2.js"></script>
-    <!-- <script defer src="./data.js"></script> -->
+    <script defer src="./data.js"></script>
     <title>금융앱만들기-toyproject</title>
   </head>
   <body>
@@ -26,7 +26,7 @@
               <div class="nav">
                 <span>9:41</span>
                 <div class="img">
-                  <span><img src="./image/CellularConnection.png" alt="연결" class="connection"/></span>
+                  <span><img src="./image/Cellular Connection.png" alt="연결" class="connection"/></span>
                   <span><img src="./image/Wifi.png" alt="와이파이" class="wifi"/></span>
                   <span><img src="./image/Battery.png" alt="베터리" class="battery"/></span>
                 </div>
@@ -122,10 +122,10 @@
                       <button><img src="./image/Group 28.png" alt="" /></button>
                     </li>
                     <li>
-                      <button><img src="./image/Glyph_.png" alt="" /></button>
+                      <button><img src="./image/Glyph_ .png" alt="" /></button>
                     </li>
                     <li>
-                      <button><img src="./image/Glyph.png" alt="" /></button>
+                      <button><img src="./image/Glyph_ .png" alt="" /></button>
                     </li>
                   </ul>
                 </div>
