--- a/토이프로젝트/토이프로젝트/index1.html
+++ b/토이프로젝트/토이프로젝트/index1.html
@@ -64,7 +64,7 @@
                   <a href="#">Go</a>
                 </div>
                 <div class="main2">
-                  <img src="./image/올림.png" alt="올림" class="img-up" />
+                  <img src="./image/올림.png" alt="올림" class="img-up" style="cursor:pointer;" onclick="window.scrollTo(0,0);"/>
                   <div class="swiper-container first">
                     <div class="swiper-wrapper">
                       <div class="swiper-slide"> 
